--- a/themes/twitter/templates/twitter/photo.html
+++ b/themes/twitter/templates/twitter/photo.html
@@ -86,9 +86,11 @@ rules: [
 				<a href="{{ photo.get_previous }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
 				{% endif %}
 				<a href="{{ photo.get_fullscreen }}" class="btn"><i class="icon-picture"></i> Full Screen</a>
-				<a href="{% url photo_download photo_id=photo.id %}" class="btn">Download Full Size</a>
+				{% if enable_download %}
+				<a href="{% url photo_download photo_id=photo.id %}" class="btn"><i class="icon-download-alt"></i> Download Full Size</a>
+				{% endif %}
 				{% if photo.get_next %}
-				<a href="{{ photo.get_next }}" class="btn"><i class="icon-arrow-right"></i> Next</a>
+				<a href="{{ photo.get_next }}" class="btn">Next <i class="icon-arrow-right"></i></a>
 			    {% endif %}
 			</div>
 				<div class="thumbnail">
