--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -10,11 +10,7 @@
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}administrator/css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}administrator/css/added.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
+
     <link href="{{ STATIC_URL }}administrator/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -69,7 +65,7 @@
     </form>
   </div>
   
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
