--- a/themes/twitter/templates/twitter/albums.html
+++ b/themes/twitter/templates/twitter/albums.html
@@ -25,10 +25,10 @@
 </ul>
 
 <div class="page-header">
-    <h2>{{ album.title }} <button id="start-slideshow" class="btn btn-large btn-success" data-slideshow="5000" data-target="#modal-gallery" data-selector="#gallery a[rel=gallery]">Start Slideshow</button></h2>
+    <h2>{{ album.title }} <button id="start-slideshow" class="btn" data-slideshow="5000" data-target="#modal-gallery" data-selector="#gallery a[rel=gallery]">Start Slideshow</button></h2>
 </div>
-<div data-toggle="modal-gallery" data-target="#modal-gallery">
-{% for photo in photos.object_list %}
+<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
+{% for photo in full_album %}
     {% include "twitter/snippets/slideshow_list.html" %}
 {% endfor %}
 </div>
@@ -135,6 +135,7 @@
 /*jslint unparam: true */
 /*global window, document, $ */
 $(function () {
+    $('#modal-gallery').addClass('modal-fullscreen');
     'use strict';
 
     // Start slideshow button:
@@ -153,26 +154,7 @@ $(function () {
         modal.modal(options);
     });
 
-    // Toggle fullscreen button:
-    $('#toggle-fullscreen').button().click(function () {
-        var button = $(this),
-            root = document.documentElement;
-        if (!button.hasClass('active')) {
-            $('#modal-gallery').addClass('modal-fullscreen');
-            if (root.webkitRequestFullScreen) {
-                root.webkitRequestFullScreen(
-                    window.Element.ALLOW_KEYBOARD_INPUT
-                );
-            } else if (root.mozRequestFullScreen) {
-                root.mozRequestFullScreen();
-            }
-        } else {
-            $('#modal-gallery').removeClass('modal-fullscreen');
-            (document.webkitCancelFullScreen ||
-                document.mozCancelFullScreen ||
-                $.noop).apply(document);
-        }
-    });
+    
 
     
 });
