--- a/apps/administrator/templates/administrator/add_photos.html
+++ b/apps/administrator/templates/administrator/add_photos.html
@@ -1,7 +1,8 @@
 {% extends "administrator/base.html" %}
+
 {% block extra_foot %}
 {{ block.super }}
-<!-- Begin New UPloader -->
+<!-- Bootstrap Image Gallery styles -->
 <link rel="stylesheet" href="http://blueimp.github.com/Bootstrap-Image-Gallery/css/bootstrap-image-gallery.min.css">
 <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
 <link rel="stylesheet" href="{{ STATIC_URL }}uploader/css/jquery.fileupload-ui.css">
@@ -25,25 +26,12 @@
 <script src="{{ STATIC_URL }}uploader/js/jquery.fileupload-fp.js"></script>
 <!-- The File Upload user interface plugin -->
 <script src="{{ STATIC_URL }}uploader/js/jquery.fileupload-ui.js"></script>
-
+<!-- The localization script -->
+<script src="{{ STATIC_URL }}uploader/js/locale.js"></script>
+<!-- The main application script -->
+<script src="{{ STATIC_URL }}uploader/js/main.js"></script>
 <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
 <!--[if gte IE 8]><script src="{{ STATIC_URL }}uploader/js/cors/jquery.xdr-transport.js"></script><![endif]-->
-<!-- The template to display files available for upload -->
-
-<!-- End New Uploader -->
-
-<script>
-$(function () {
-    $('#fileupload').fileupload({
-        dataType: 'json',
-        done: function (e, data) {
-            $.each(data.result, function (index, file) {
-                $('<p/>').text(file.name).appendTo(document.body);
-            });
-        }
-    });
-});
-</script>
   {% endblock extra_foot %}
   
   {% block navigation %}
@@ -56,92 +44,158 @@ $(function () {
 <div class="page-header">
 <h2>Add Photos</h2>
 </div>
-{% load verbatim %}
-
-<h2>Jquery Upload</h2>
-<!-- The file upload form used as target for the file upload widget -->
-<div id="fileupload">
-    <form action="{% url administrator.upload.multiuploader %}" method="POST" enctype="multipart/form-data">
-        <div class="fileupload-buttonbar">
-            <label class="fileinput-button">
-                <span>Add files...</span>
-                <input type="file" name="files[]" multiple>
-            </label>
-            <button type="submit" class="start">Start upload</button>
-            <button type="reset" class="cancel">Cancel upload</button>
-            <button type="button" class="delete">Delete files</button>
+<blockquote>
+        <p>File Upload widget with multiple file selection, drag&amp;drop support, progress bars and preview images for jQuery.<br>
+        Supports cross-domain, chunked and resumable file uploads and client-side image resizing.<br>
+        Works with any server-side platform (PHP, Python, Ruby on Rails, Java, Node.js, Go etc.) that supports standard HTML form file uploads.</p>
+    </blockquote>
+    <br>
+    <!-- The file upload form used as target for the file upload widget -->
+    <form id="fileupload" action="." method="POST" enctype="multipart/form-data">
+        <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
+        <div class="row fileupload-buttonbar">
+            <div class="span7">
+                <!-- The fileinput-button span is used to style the file input field as button -->
+                <span class="btn btn-success fileinput-button">
+                    <i class="icon-plus icon-white"></i>
+                    <span>Add files...</span>
+                    <input type="file" name="files[]" multiple>
+                </span>
+                <button type="submit" class="btn btn-primary start">
+                    <i class="icon-upload icon-white"></i>
+                    <span>Start upload</span>
+                </button>
+                <button type="reset" class="btn btn-warning cancel">
+                    <i class="icon-ban-circle icon-white"></i>
+                    <span>Cancel upload</span>
+                </button>
+                <button type="button" class="btn btn-danger delete">
+                    <i class="icon-trash icon-white"></i>
+                    <span>Delete</span>
+                </button>
+                <input type="checkbox" class="toggle">
+            </div>
+            <!-- The global progress information -->
+            <div class="span5 fileupload-progress fade">
+                <!-- The global progress bar -->
+                <div class="progress progress-success progress-striped active">
+                    <div class="bar" style="width:0%;"></div>
+                </div>
+                <!-- The extended global progress information -->
+                <div class="progress-extended">&nbsp;</div>
+            </div>
         </div>
+        <!-- The loading indicator is shown during file processing -->
+        <div class="fileupload-loading"></div>
+        <br>
+        <!-- The table listing the files available for upload/download -->
+        <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
     </form>
-    <div class="fileupload-content">
-        <table class="files"></table>
-        <div class="fileupload-progressbar"></div>
+    <br>
+    <div class="well">
+        <h3>Demo Notes</h3>
+        <ul>
+            <li>The maximum file size for uploads in this demo is <strong>5 MB</strong> (default file size is unlimited).</li>
+            <li>Only image files (<strong>JPG, GIF, PNG</strong>) are allowed in this demo (by default there is no file type restriction).</li>
+            <li>Uploaded files will be deleted automatically after <strong>5 minutes</strong> (demo setting).</li>
+            <li>You can <strong>drag &amp; drop</strong> files from your desktop on this webpage with Google Chrome, Mozilla Firefox and Apple Safari.</li>
+            <li>Please refer to the <a href="https://github.com/blueimp/jQuery-File-Upload">project website</a> and <a href="https://github.com/blueimp/jQuery-File-Upload/wiki">documentation</a> for more information.</li>
+            <li>Built with Twitter's <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> toolkit and Icons from <a href="http://glyphicons.com/">Glyphicons</a>.</li>
+        </ul>
     </div>
 </div>
-<div id="help" style="color:gray;">
-<h2>
-    <p>You can select Multiple files at once using Ctrl(Win) or Command(Mac), or you can drag'n'drop your files on this form.</p>
-</h2>
-{% verbatim %}
+<!-- modal-gallery is the modal dialog used for the image gallery -->
+<div id="modal-gallery" class="modal modal-gallery hide fade" data-filter=":odd">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">&times;</a>
+        <h3 class="modal-title"></h3>
+    </div>
+    <div class="modal-body"><div class="modal-image"></div></div>
+    <div class="modal-footer">
+        <a class="btn modal-download" target="_blank">
+            <i class="icon-download"></i>
+            <span>Download</span>
+        </a>
+        <a class="btn btn-success modal-play modal-slideshow" data-slideshow="5000">
+            <i class="icon-play icon-white"></i>
+            <span>Slideshow</span>
+        </a>
+        <a class="btn btn-info modal-prev">
+            <i class="icon-arrow-left icon-white"></i>
+            <span>Previous</span>
+        </a>
+        <a class="btn btn-primary modal-next">
+            <span>Next</span>
+            <i class="icon-arrow-right icon-white"></i>
+        </a>
+    </div>
+</div>
 <script id="template-upload" type="text/x-jquery-tmpl">
-    <tr class="template-upload{{if error}} ui-state-error{{/if}}">
+    <tr class="template-upload{{ open_tv }}if error{{ close_tv }} ui-state-error{{ open_tv }}/if{{ close_tv }}">
         <td class="preview"></td>
         <td class="name">${name}</td>
         <td class="size">${sizef}</td>
-        {{if error}}
-            <td class="error" colspan="2">Error:
-                {{if error === 'maxFileSize'}}File is too big
-                {{else error === 'minFileSize'}}File is too small
-                {{else error === 'acceptFileTypes'}}Filetype not allowed
-                {{else error === 'maxNumberOfFiles'}}Max number of files exceeded
-                {{else}}${error}
-                {{/if}}
-            </td>
-        {{else}}
-            <td class="progress"><div></div></td>
-            <td class="start"><button>Start</button></td>
-        {{/if}}
-        <td class="cancel"><button>Cancel</button></td>
+        {{ open_tv }}if error{{ close_tv }}
+        <td class="error" colspan="2">Error:
+            {{ open_tv }}if error === 'maxFileSize'{{ close_tv }}File is too big
+            {{ open_tv }}else error === 'minFileSize'{{ close_tv }}File is too small
+            {{ open_tv }}else error === 'acceptFileTypes'{{ close_tv }}Filetype not allowed
+            {{ open_tv }}else error === 'maxNumberOfFiles'{{ close_tv }}Max number of files exceeded
+            {{ open_tv }}else{{ close_tv }}${error}
+            {{ open_tv }}/if{{ close_tv }}
+        </td>
+        {{ open_tv }}else{{ close_tv }}
+        <td class="progress">
+            <div></div>
+        </td>
+        <td class="start">
+            <button>Start</button>
+        </td>
+        {{ open_tv }}/if{{ close_tv }}
+        <td class="cancel">
+            <button>Cancel</button>
+        </td>
     </tr>
 </script>
 <script id="template-download" type="text/x-jquery-tmpl">
-    <tr class="template-download{{if error}} ui-state-error{{/if}}">
-        {{if error}}
-            <td></td>
-            <td class="name">${name}</td>
-            <td class="size">${sizef}</td>
-            <td class="error" colspan="2">Error:
-                {{if error === 1}}File exceeds upload_max_filesize (php.ini directive)
-                {{else error === 2}}File exceeds MAX_FILE_SIZE (HTML form directive)
-                {{else error === 3}}File was only partially uploaded
-                {{else error === 4}}No File was uploaded
-                {{else error === 5}}Missing a temporary folder
-                {{else error === 6}}Failed to write file to disk
-                {{else error === 7}}File upload stopped by extension
-                {{else error === 'maxFileSize'}}File is too big
-                {{else error === 'minFileSize'}}File is too small
-                {{else error === 'acceptFileTypes'}}Filetype not allowed
-                {{else error === 'maxNumberOfFiles'}}Max number of files exceeded
-                {{else error === 'uploadedBytes'}}Uploaded bytes exceed file size
-                {{else error === 'emptyResult'}}Empty file upload result
-                {{else}}${error}
-                {{/if}}
-            </td>
-        {{else}}
-            <td class="preview">
-                {{if thumbnail_url}}
-                    <a href="${url}" target="_blank"><img src="${thumbnail_url}"></a>
-                {{/if}}
-            </td>
-            <td class="name">
-                <a href="${url}"{{if thumbnail_url}} target="_blank"{{/if}}>${name}</a>
-            </td>
-            <td class="size">${sizef}</td>
-            <td colspan="2"></td>
-        {{/if}}
+    <tr class="template-download{{ open_tv }}if error{{ close_tv }} ui-state-error{{ open_tv }}/if{{ close_tv }}">
+        {{ open_tv }}if error{{ close_tv }}
+        <td></td>
+        <td class="name">${name}</td>
+        <td class="size">${sizef}</td>
+        <td class="error" colspan="2">Error:
+            {{ open_tv }}if error === 1{{ close_tv }}File exceeds upload_max_filesize (php.ini directive)
+            {{ open_tv }}else error === 2{{ close_tv }}File exceeds MAX_FILE_SIZE (HTML form directive)
+            {{ open_tv }}else error === 3{{ close_tv }}File was only partially uploaded
+            {{ open_tv }}else error === 4{{ close_tv }}No File was uploaded
+            {{ open_tv }}else error === 5{{ close_tv }}Missing a temporary folder
+            {{ open_tv }}else error === 6{{ close_tv }}Failed to write file to disk
+            {{ open_tv }}else error === 7{{ close_tv }}File upload stopped by extension
+            {{ open_tv }}else error === 'maxFileSize'{{ close_tv }}File is too big
+            {{ open_tv }}else error === 'minFileSize'{{ close_tv }}File is too small
+            {{ open_tv }}else error === 'acceptFileTypes'{{ close_tv }}Filetype not allowed
+            {{ open_tv }}else error === 'maxNumberOfFiles'{{ close_tv }}Max number of files exceeded
+            {{ open_tv }}else error === 'uploadedBytes'{{ close_tv }}Uploaded bytes exceed file size
+            {{ open_tv }}else error === 'emptyResult'{{ close_tv }}Empty file upload result
+            {{ open_tv }}else{{ close_tv }}${error}
+            {{ open_tv }}/if{{ close_tv }}
+        </td>
+        {{ open_tv }}else{{ close_tv }}
+        <td class="preview">
+            {{ open_tv }}if thumbnail_url{{ close_tv }}
+            <a href="${url}" target="_blank"><img src="${thumbnail_url}"></a>
+            {{ open_tv }}/if{{ close_tv }}
+        </td>
+        <td class="name">
+            <a href="${url}" {{ open_tv }}if thumbnail_url{{ close_tv }}
+               target="_blank"{{ open_tv }}/if{{ close_tv }}>${name}</a>
+        </td>
+        <td class="size">${sizef}</td>
+        <td colspan="2"></td>
+        {{ open_tv }}/if{{ close_tv }}
         <td class="delete">
             <button data-type="${delete_type}" data-url="${delete_url}">Delete</button>
         </td>
     </tr>
 </script>
-{% endverbatim %}
 {% endblock main_content %}
